update packages & yarn

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -5,12 +5,7 @@
     "stylelint-order",
     "stylelint-use-logical-spec"
   ],
-  "extends": [
-    "stylelint-config-standard-scss",
-    "stylelint-config-recommended-vue",
-    "stylelint-config-prettier",
-    "stylelint-config-idiomatic-order"
-  ],
+  "extends": ["stylelint-config-standard-scss", "stylelint-config-recommended-vue", "stylelint-config-idiomatic-order"],
   "customSyntax": "postcss-html",
   "overrides": [
     {
@@ -19,7 +14,6 @@
     }
   ],
   "rules": {
-    "indentation": 2,
     "plugin/declaration-block-no-ignored-properties": true,
     "liberty/use-logical-spec": "always"
   }
