--- a/package.json
+++ b/package.json
@@ -16,50 +16,52 @@
     "test": "jest"
   },
   "dependencies": {
-    "pinia": "^2.0.23",
-    "vue": "^3.2.41",
-    "vue-router": "^4.1.6"
+    "pinia": "^2.1.7",
+    "vue": "^3.4.7",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.4",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.2.6",
-    "@vue/vue3-jest": "^29.2.1",
-    "browserslist": "^4.21.4",
-    "eslint": "^8.27.0",
+    "@rushstack/eslint-patch": "^1.6.1",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.7",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.3",
+    "@vue/vue3-jest": "^29.2.6",
+    "browserslist": "^4.22.2",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-vue": "^9.7.0",
-    "husky": "^8.0.2",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "lint-staged": "^13.0.3",
-    "postcss": "^8.4.19",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-vue": "^9.19.2",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.0",
+    "postcss": "^8.4.33",
     "postcss-html": "^1.5.0",
-    "postcss-scss": "^4.0.5",
-    "prettier": "^2.7.1",
-    "sass": "^1.56.1",
-    "stylelint": "^14.14.1",
-    "stylelint-config-idiomatic-order": "^9.0.0",
-    "stylelint-config-prettier": "^9.0.4",
-    "stylelint-config-recommended-vue": "^1.4.0",
-    "stylelint-config-standard-scss": "^6.1.0",
-    "stylelint-declaration-block-no-ignored-properties": "^2.6.0",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.3.0",
-    "stylelint-use-logical-spec": "^4.1.0",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.3",
+    "postcss-scss": "^4.0.9",
+    "prettier": "^3.1.1",
+    "sass": "^1.69.7",
+    "stylelint": "^16.1.0",
+    "stylelint-config-idiomatic-order": "^10.0.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard-scss": "^13.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.8.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-scss": "^6.0.0",
+    "stylelint-use-logical-spec": "^5.0.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-stylelint": "^3.0.8",
-    "vue-tsc": "^1.0.9"
-  }
+    "vite-plugin-stylelint": "^5.3.1",
+    "vue-eslint-parser": "^9.4.0",
+    "vue-tsc": "^1.8.27"
+  },
+  "packageManager": "yarn@4.0.2"
 }
